<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCBN-hOtMYCMjjBYGYTTq_x5Y6-SNZKH5s</string>
    <string name="app_name">Tourist</string>
    <string-array name="sections">
        <item name="about_uzbekistan">Об Узбекистане</item>
        <item name="historical_places">Исторические места</item>
        <item name="book_room">Забронировать номер</item>
        <item name="order_taxi">Заказать такси</item>
        <item name="what_to_eat">Что поесть</item>
        <item name="what_to_see">Что посмотреть</item>
        <item name="where_to_go">Куда пойти</item>
        <item name="what_buy">Что купить</item>
        <item name="helpful_information">Полезная информация</item>
        <item name="currency_exchange">Обмен валют</item>
        <item name="weather">Погода</item>
        <item name="support_service">Служба поддержки</item>
    </string-array>
    <string name="discounts">Дисконты</string>
    <string name="favorites">Избранное</string>
    <string name="map">Карта</string>
    <string name="sos">SOS</string>
    <string name="search">Поиск</string>
    <string name="historical_places">Исторические места</string>

    <string name="activate_discount_card">Активировать дисконтную карту</string>
    <string name="login_to_your_account">Вход в личный кабинет</string>
    <string name="how_to_use">Как пользоваться</string>
    <string name="tourist_information_card">Памятка туристу</string>
    <string name="insurance">Страхование</string>
    <string name="mobile_connection">Мобильная связь</string>
    <string name="public_offer">Публичная оферта</string>
    <string name="about_service">О сервисе</string>
    <string name="settings">Настройки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_uzbekistan">Об Узбекистане</string>
    <string name="what_to_see">Что посмотреть</string>
    <string name="what_to_eat">Что поесть</string>
    <string name="where_to_go">Куда пойти</string>
    <string name="what_to_buy">Что купить</string>
    <string name="currency_exchange">Обмен валют</string>
    <string name="support_service">Служба поддержки</string>
    <string name="helpful_information">Полезная информация</string>
    <string name="book_room">Забронировать номер</string>
    <string name="sum">сум</string>
    <string name="feature_is_not_available">Это возможность не доступна для данного региона</string>
    <string name="ok">OK</string>
    <string name="today">Сегодня</string>
    <string name="weather">Погода</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Электронный адрес</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="address">Адрес</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="name_must_be_at_least_2_characters">Имя должно быть не меньше 2 символов</string>
    <string name="login_must_be_at_least_2_characters">Логин должен быть не меньше 2 символов</string>
    <string name="name_must_not_be_more_than_35_characters">Имя должно быть не больше 35 символов</string>
    <string name="login_must_not_be_more_than_35_characters">Логин должен быть не больше 35 символов</string>
    <string name="name_can_not_be_empty">Имя не может быть пустым</string>
    <string name="login_can_not_be_empty">Логин не может быть пустым</string>
    <string name="password_must_be_at_least_4_characters">Пароль должен быть не меньше 4 символов</string>
    <string name="password_must_not_be_more_than_15_characters">Пароль должен быть не больше 15 символов</string>
    <string name="password_can_not_be_empty">Пароль не может быть пустым</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="activate">Активировать</string>
    <string name="serial_number">Серийный номер</string>
    <string name="activation_code">Код активации</string>
    <string name="km">km</string>
    <string name="basic_data">Основные данные</string>
    <string name="distance">Расстояние</string>
    <string name="category">Категория</string>
    <string name="region">Регион</string>
    <string name="district">Район</string>
    <string name="landmark">Ориентир</string>
    <string name="about_company">О заведении</string>
    <string name="book">Забронировать</string>
    <string name="how_to_get_there">Как доехать</string>
    <string name="call">Позвонить</string>
    <string name="no_number">Нет номера</string>
    <string name="all">Все</string>
    <string name="languages">Языки</string>
    <string name="text">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</string>
    <string name="no_data">К сожалению, по вашему запросу ничего не найдено.</string>
    <string name="server_error">Извините, произошла ошибка</string>
    <string name="can_use_latin_alphabet_and_numbers">Можно использовать буквы латинского алфавита и цифры</string>
    <string name="type_correct_email_address">Введите корректный адрес электронной почты</string>
    <string name="this_field_must_be_filled">Это поле должно быть заполнено</string>
    <string name="allowable_characters_2_35">Допустимое количество символов: 2–35</string>
    <string name="maximum_number_of_characters_255">Максимальное количество символов: 255</string>
    <string name="passwords_are_different">Пароли не совпадают. Повторите попытку.</string>
    <string name="enter_correct_phone">Введите корректный телефонный номер</string>
    <string name="sign_in_successful">Авторизация прошла успешно</string>
    <string name="loading">Загрузка...</string>
    <string name="instructions_password_recovery_sent_to_email">Инструкции по восстановлению пароля отправлены на почту</string>
    <string name="discount_card_activated">Дисконтная карта активирована</string>
    <string name="added_successfully">Успешно добавлено</string>
    <string name="add_failed">Произошла ошибка при добаление</string>
    <string name="removed_successfully">Успешно удалено</string>
    <string name="remove_failed">Произошла ошибка при добаление</string>
    <string name="please_sign_in">Пройдите авторизацию</string>
    <string name="no_favorites">У вас нет избранных</string>
    <string name="add_to_favorites_description">Чтобы добавить в Избранные, нажмите на звёздочку</string>
    <string name="location_search_is_in_progress">Идёт поиск местоположение...</string>
</resources>
